--- a/rollup/main/default/classes/RollupFlowBulkProcessor.cls
+++ b/rollup/main/default/classes/RollupFlowBulkProcessor.cls
@@ -13,8 +13,6 @@ global without sharing class RollupFlowBulkProcessor {
     global String rollupContext;
     @InvocableVariable(label='Defer processing?')
     global Boolean deferProcessing = true;
-    @InvocableVariable(label='Is Rollup Started From Parent' description='If the calc records are the parent records, set this to true')
-    global Boolean isRollupStartedFromParent = false;
     @InvocableVariable(label='Calc Item Type When Rollup Started From Parent')
     global String calcItemTypeWhenRollupStartedFromParent;
   }
@@ -42,8 +40,7 @@ global without sharing class RollupFlowBulkProcessor {
             String.isNotBlank(flowInput.calcItemTypeWhenRollupStartedFromParent) && flowInput.calcItemTypeWhenRollupStartedFromParent == meta.CalcItem__c
           ) {
             Rollup.FlowInput input = new Rollup.FlowInput();
-            input.rollupContext = flowInput.rollupContext;
-            input.recordsToRollup = flowInput.recordsToRollup;
+            // pertinent fields from CMDT
             input.calcItemChangedFields = meta.ChangedFieldsOnCalcItem__c;
             input.calcItemWhereClause = meta.CalcItemWhereClause__c;
             input.fullRecalculationDefaultNumberValue = meta.FullRecalculationDefaultNumberValue__c;
@@ -56,8 +53,11 @@ global without sharing class RollupFlowBulkProcessor {
             input.rollupFieldOnOpObject = meta.RollupFieldOnLookupObject__c;
             input.rollupOperation = meta.RollupOperation__c;
             input.rollupSObjectName = meta.LookupObject__c;
+            input.isRollupStartedFromParent = meta.IsRollupStartedFromParent__c;
+            // everything else is supplied from the invocable
+            input.rollupContext = flowInput.rollupContext;
+            input.recordsToRollup = flowInput.recordsToRollup;
             input.deferProcessing = flowInput.deferProcessing;
-            input.isRollupStartedFromParent = flowInput.isRollupStartedFromParent;
             input.calcItemTypeWhenRollupStartedFromParent = flowInput.calcItemTypeWhenRollupStartedFromParent;
             rollupFlowInputs.add(input);
 
